fixing notifyFailed